--- a/FilipeJessicaCarol/Base.lproj/Main.storyboard
+++ b/FilipeJessicaCarol/Base.lproj/Main.storyboard
@@ -1,24 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Sxc-YT-Pw2">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Tab Bar Controller-->
+        <scene sceneID="z9h-L5-mcm">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DHm-6z-c7O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tabBarController id="Sxc-YT-Pw2" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="g4N-pI-1va">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="iTv-Do-xiT" kind="relationship" relationship="viewControllers" id="LKB-EC-blu"/>
+                        <segue destination="8E3-0x-Aj1" kind="relationship" relationship="viewControllers" id="DeR-Lw-RYG"/>
+                        <segue destination="ePS-dr-4v7" kind="relationship" relationship="viewControllers" id="hdv-VP-QVT"/>
+                    </connections>
+                </tabBarController>
             </objects>
+            <point key="canvasLocation" x="-62" y="-567"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="mE6-mz-8wT">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Home" id="iTv-Do-xiT" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="wSt-bi-piq"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="emr-ti-Cum" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-212" y="-145"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="VUh-f4-65t">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Settings" id="8E3-0x-Aj1" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Cd8-zG-04j"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bwa-LP-Hq2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-62" y="-113"/>
+        </scene>
+        <!--Purchases-->
+        <scene sceneID="fWt-w9-cqN">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Purchases" id="ePS-dr-4v7" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="II1-zk-fIZ"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V4z-Fg-0Fn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="88" y="-145"/>
         </scene>
     </scenes>
 </document>
