--- a/FilipeJessicaCarol/Base.lproj/Main.storyboard
+++ b/FilipeJessicaCarol/Base.lproj/Main.storyboard
@@ -9,7 +9,6 @@
         <!--Tab Bar Controller-->
         <scene sceneID="z9h-L5-mcm">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="DHm-6z-c7O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tabBarController id="Sxc-YT-Pw2" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="g4N-pI-1va">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
@@ -22,33 +21,34 @@
                         <segue destination="ePS-dr-4v7" kind="relationship" relationship="viewControllers" id="hdv-VP-QVT"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DHm-6z-c7O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-62" y="-567"/>
         </scene>
-        <!--Home-->
+        <!--HomeView-->
         <scene sceneID="mE6-mz-8wT">
             <objects>
-                <viewControllerPlaceholder storyboardName="Home" id="iTv-Do-xiT" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="HomeView" id="iTv-Do-xiT" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="wSt-bi-piq"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="emr-ti-Cum" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-212" y="-145"/>
         </scene>
-        <!--Settings-->
+        <!--SettingsView-->
         <scene sceneID="VUh-f4-65t">
             <objects>
-                <viewControllerPlaceholder storyboardName="Settings" id="8E3-0x-Aj1" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="SettingsView" id="8E3-0x-Aj1" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Cd8-zG-04j"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bwa-LP-Hq2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-62" y="-113"/>
         </scene>
-        <!--Purchases-->
+        <!--PurchasesView-->
         <scene sceneID="fWt-w9-cqN">
             <objects>
-                <viewControllerPlaceholder storyboardName="Purchases" id="ePS-dr-4v7" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="PurchasesView" id="ePS-dr-4v7" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="II1-zk-fIZ"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V4z-Fg-0Fn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
